// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> renders a H3 heading  1`] = `
.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

<div>
  <h3
    class="c0"
  >
    Lorem Ipsum
  </h3>
</div>
`;

exports[`<PageTitle /> renders a H1 page title  1`] = `
.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

<div>
  <h1
    class="c0"
  >
    Lorem Ipsum
  </h1>
</div>
`;

exports[`<Subtitle /> renders a subtitle  1`] = `
.c0 {
  display: block;
  margin: 0 0 1rem 0;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.4rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
  text-transform: uppercase;
}

<div>
  <span
    class="c0"
  >
    Lorem Ipsum
  </span>
</div>
`;

exports[`<Title /> renders a H2 title  1`] = `
.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

<div>
  <h2
    class="c0"
  >
    Lorem Ipsum
  </h2>
</div>
`;
